<resources>
    <string name="app_name">Ramulf Memory</string>
    <string name="play">Spielen</string>
    <string name="settings">Einstellung</string>
    <string name="quit">Beenden</string>
    <string name="ok">Ok</string>
    <string name="back">Zurück</string>
    <string name="playAgain">Nochmal spielen</string>
    <string name="backToMenu">Zurück zum Menü</string>
    <string name="x">x</string>
    <string name="camerabutton">Kamera</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Foto</string>
</resources>
