<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gameboard"
    android:orientation="vertical"
    tools:context="com.example.fdai3744.memorygame3.Settings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/setSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="85dp"
            android:background="@drawable/button_red"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="288dp"
            android:layout_above="@+id/back"
            android:layout_alignStart="@+id/back" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="54dp"
            android:background="@drawable/button_red"
            android:text="@string/back"
            android:textColor="@android:color/white"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="369dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/leftArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_left_red"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="100dp"
            android:layout_above="@+id/setSettings"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="78dp" />

        <Button
            android:id="@+id/RightArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_right_red"
            tools:layout_editor_absoluteX="268dp"
            tools:layout_editor_absoluteY="100dp"
            android:layout_alignBottom="@+id/backsides"
            android:layout_alignParentEnd="true" />

        <ImageButton
            android:id="@+id/backsides"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/backside_red"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="93dp"
            android:layout_alignBottom="@+id/leftArrow"
            android:layout_centerHorizontal="true"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_red"
            android:textColor="@android:color/white"
            android:layout_marginBottom="18dp"
            android:text="@string/camerabutton"
            android:layout_above="@+id/back"
            android:layout_alignStart="@+id/setSettings" />
    </RelativeLayout>
</LinearLayout>
